--- a/config/bbp9981.conf
+++ b/config/bbp9981.conf
@@ -11,3 +11,9 @@ CONFIG_LOG=y
 CONFIG_SENSOR_LOG_LEVEL_DBG=n
 CONFIG_INPUT_A320=y
 CONFIG_ZMK_A320_INPUT_HANDLER=y
+
+
+# enable ZMK Studio
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
+CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
