--- a/config/boards/bbp9981/bbp9981.dts
+++ b/config/boards/bbp9981/bbp9981.dts
@@ -1,6 +1,6 @@
 /*
  * Copyright (c) 2023 ZitaoTech
- * 
+ *
  * SPDX-License-Identifier: MIT
  */
 
@@ -9,12 +9,63 @@
 
 #include <dt-bindings/led/led.h>
 #include <dt-bindings/zmk/matrix_transform.h>
-#include "bbp9981-pinctrl.dtsi"
-#include "bbp9981-layouts.dtsi"
+#include <physical_layouts.dtsi>
+//#include "bbp9981-layouts.dtsi"
 
 / {
     model = "bbp9981";
     compatible = "ZitaoTech,bbp9981";
+
+    bbp9981_layout: bbp9981_layout {
+        compatible = "zmk,physical-layout";
+        display-name = "bbp9981";
+
+        kscan = <&kscan0>;
+        transform = <&matrix_transform0>;
+
+        keys  //                     w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 200 100    0    0       0     0     0>
+            , <&key_physical_attrs 200 100  200    0       0     0     0>
+            , <&key_physical_attrs 100 100  450    0       0     0     0>
+            , <&key_physical_attrs 200 100  600    0       0     0     0>
+            , <&key_physical_attrs 200 100  800    0       0     0     0>
+            , <&key_physical_attrs 100 100    0  100       0     0     0>
+            , <&key_physical_attrs 100 100  100  100       0     0     0>
+            , <&key_physical_attrs 100 100  200  100       0     0     0>
+            , <&key_physical_attrs 100 100  300  100       0     0     0>
+            , <&key_physical_attrs 100 100  400  100       0     0     0>
+            , <&key_physical_attrs 100 100  500  100       0     0     0>
+            , <&key_physical_attrs 100 100  600  100       0     0     0>
+            , <&key_physical_attrs 100 100  700  100       0     0     0>
+            , <&key_physical_attrs 100 100  800  100       0     0     0>
+            , <&key_physical_attrs 100 100  900  100       0     0     0>
+            , <&key_physical_attrs 100 100    0  200       0     0     0>
+            , <&key_physical_attrs 100 100  100  200       0     0     0>
+            , <&key_physical_attrs 100 100  200  200       0     0     0>
+            , <&key_physical_attrs 100 100  300  200       0     0     0>
+            , <&key_physical_attrs 100 100  400  200       0     0     0>
+            , <&key_physical_attrs 100 100  500  200       0     0     0>
+            , <&key_physical_attrs 100 100  600  200       0     0     0>
+            , <&key_physical_attrs 100 100  700  200       0     0     0>
+            , <&key_physical_attrs 100 100  800  200       0     0     0>
+            , <&key_physical_attrs 100 100  900  200       0     0     0>
+            , <&key_physical_attrs 100 100    0  300       0     0     0>
+            , <&key_physical_attrs 100 100  100  300       0     0     0>
+            , <&key_physical_attrs 100 100  200  300       0     0     0>
+            , <&key_physical_attrs 100 100  300  300       0     0     0>
+            , <&key_physical_attrs 100 100  400  300       0     0     0>
+            , <&key_physical_attrs 100 100  500  300       0     0     0>
+            , <&key_physical_attrs 100 100  600  300       0     0     0>
+            , <&key_physical_attrs 100 100  700  300       0     0     0>
+            , <&key_physical_attrs 100 100  800  300       0     0     0>
+            , <&key_physical_attrs 100 100  900  300       0     0     0>
+            , <&key_physical_attrs 125 100  100  400       0     0     0>
+            , <&key_physical_attrs 125 100  225  400       0     0     0>
+            , <&key_physical_attrs 300 100  350  400       0     0     0>
+            , <&key_physical_attrs 125 100  650  400       0     0     0>
+            , <&key_physical_attrs 125 100  775  400       0     0     0>
+            ;
+    };
 
     chosen {
         zephyr,code-partition = &code_partition;
@@ -173,7 +224,7 @@ RC(3,0)          RC(3,2)             RC(3,4)             RC(3,6)          RC(3,8
 &bbp9981_layout{
 	transform = <&default_transform>;
 	kscan = <&kscan0>;
-};
+}; 
 
 zephyr_udc0: &usbd { 
     compatible = "nordic,nrf-usbd"; 
